<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fractal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMyCoolStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_cool_style"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMaterialLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/material_light"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize"/>


        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMaterialLightDarkAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/material_light_action_bar_dark"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMaterialDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/material_dark"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize"/>
    </RadioGroup>


    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_marginLeft"
        android:layout_marginEnd="@dimen/layout_marginRight"
        android:backgroundTint="@color/blue_2"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/operationField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/numberField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:autofillHints="no"
            android:background="@color/purple_2"
            android:gravity="center_horizontal"
            android:hint="@string/entNumber"
            android:inputType="phone"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14pt"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/operationField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- поле знака операции -->
    <TextView
        android:id="@+id/operationField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_marginLeft"
        android:layout_marginEnd="@dimen/layout_marginRight"
        android:background="@color/teal_200"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="13pt"
        app:layout_constraintBottom_toTopOf="@+id/resultField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/resultField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_marginLeft"
        android:layout_marginEnd="@dimen/layout_marginRight"
        android:background="@color/teal_200"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="21pt"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </TextView>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginStart="@dimen/layout_marginLeft"
        android:layout_marginEnd="@dimen/layout_marginRight"
        android:layout_marginBottom="5dp"
        android:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/resultField"
        app:layout_constraintStart_toStartOf="@+id/resultField">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClearAll"
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:backgroundTint="@color/purple_500"
            android:onClick="onOperationClick"
            android:text="@string/btn_clear_all"
            android:textSize="@dimen/textSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPercent"
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:backgroundTint="@color/purple_500"
            android:onClick="onOperationClick"
            android:text="@string/btn_percent"
            android:textSize="@dimen/textSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sqrt"
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:backgroundTint="@color/purple_500"
            android:onClick="onOperationClick"
            android:text="@string/btn_sqrt"
            android:textSize="@dimen/textSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDiv"
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:backgroundTint="@color/purple_500"
            android:onClick="onOperationClick"
            android:text="@string/btn_div"
            android:textSize="@dimen/textSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_1"
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:backgroundTint="@color/blue_1"
            android:onClick="onNumberClick"
            android:text="@string/btn_1"
            android:textSize="@dimen/textSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_2"
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:backgroundTint="@color/blue_1"
            android:onClick="onNumberClick"
            android:text="@string/btn_2"
            android:textSize="@dimen/textSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_3"
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:backgroundTint="@color/blue_1"
            android:onClick="onNumberClick"
            android:text="@string/btn_3"
            android:textSize="@dimen/textSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMult"
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:backgroundTint="@color/purple_500"
            android:onClick="onOperationClick"
            android:text="@string/btn_mult"
            android:textSize="@dimen/textSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_4"
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:backgroundTint="@color/blue_1"
            android:onClick="onNumberClick"
            android:text="@string/btn_4"
            android:textSize="@dimen/textSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_5"
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:backgroundTint="@color/blue_1"
            android:onClick="onNumberClick"
            android:text="@string/btn_5"
            android:textSize="@dimen/textSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_6"
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:backgroundTint="@color/blue_1"
            android:onClick="onNumberClick"
            android:text="@string/btn_6"
            android:textSize="@dimen/textSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSub"
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:backgroundTint="@color/purple_500"
            android:onClick="onOperationClick"
            android:text="@string/btn_sub"
            android:textSize="@dimen/textSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_7"
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:backgroundTint="@color/blue_1"
            android:onClick="onNumberClick"
            android:text="@string/btn_7"
            android:textSize="@dimen/textSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_8"
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:backgroundTint="@color/blue_1"
            android:onClick="onNumberClick"
            android:text="@string/btn_8"
            android:textSize="@dimen/textSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_9"
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:backgroundTint="@color/blue_1"
            android:onClick="onNumberClick"
            android:text="@string/btn_9"
            android:textSize="@dimen/textSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdd"
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:backgroundTint="@color/purple_500"
            android:onClick="onOperationClick"
            android:text="@string/btn_add"
            android:textSize="@dimen/textSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnComma"
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:backgroundTint="@color/blue_2"
            android:onClick="onNumberClick"
            android:text="@string/btn_comma"
            android:textSize="@dimen/textSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_0"
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:backgroundTint="@color/blue_1"
            android:onClick="onNumberClick"
            android:text="@string/btn_0"
            android:textSize="@dimen/textSize" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEqual"
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:backgroundTint="@color/green"
            android:onClick="onOperationClick"
            android:text="@string/btn_equal"
            android:textSize="@dimen/textSize" />

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>